# Hackathon-II-Todo-SDD

./: .gitignore  CLAUDE.md  Hackathon II.md  README.md  main.py
.claude/: settings.local.json
.claude/agents/: cli-input-validator.md  project-coordinator.md  task-formatter.md  task-validator.md
.specify/memory/: constitution.md
phase-1/: QUICKSTART.md  README.md  pyproject.toml  run_todo_app.py  start_todo_app.bat  start_todo_app.sh  test_run.py
phase-1/.claude/skills/: error_handling.md  input_parsing.md  task_formatting.md  task_state_management.md  task_validation.md
phase-1/src/: __init__.py
phase-1/src/lib/: __init__.py
phase-1/src/skills/: __init__.py  input_parsing.py  task_formatting.py
phase-2/: .gitignore
phase-2/backend/: .gitignore  README.md  app.py  check_user.py  debug_full_test.py  debug_test.py  main.py  migrate_db.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start_dev.py  test_ai_agent.py  test_db.py
phase-2/backend/src/: database.py
phase-2/backend/src/agents/: todo_agent.py
phase-2/backend/src/api/: ai_todo_router.py  auth_router.py  task_router.py
phase-2/backend/src/mcp_tools/: task_tools.py
phase-2/backend/src/middleware/: auth_middleware.py
phase-2/backend/src/models/: conversation.py  refresh_token.py  task.py  user.py
phase-2/backend/src/services/: conversation_service.py  refresh_token_service.py  task_service.py  user_service.py
phase-2/backend/src/skills/: auth_validation.py  error_handling.py  input_parsing.py  task_formatting.py  task_state_management.py  task_validation.py
(+72 files in other folders)
